# fabric-stack-workshop

./: .gitignore  .replit  LICENSE  README.md  cli.sh  replit.nix  start.sh  test_db_connection.py
backend/: .env.example  .gitignore  pyproject.toml
backend/backend/app/: .env.example  config.py  dependencies.py  main.py  security.py
backend/backend/app/database/: __init__.py  actions.py  mock_data.py  models.py
backend/backend/app/database/models/: users.py
backend/backend/app/models/: auth.py  common.py  users.py
backend/backend/app/routers/: auth.py  test_db_connection.py  users.py
backend/backend/app/security/: security.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.scss  blobz.scss  config.js  index.js
frontend/src/components/: button.jsx  button.scss  card.jsx  card.scss  change-password.jsx  input.jsx  input.scss  private-layout.css  private-layout.jsx  public-layout.jsx  public-layout.scss
frontend/src/context/: auth.js
frontend/src/hooks/: use-session-storage.js
frontend/src/pages/: admin.jsx  dashboard.jsx  login.jsx  profile.jsx  profile.scss  signup.jsx
frontend/src/services/: auth.js  index.js  user.js
workshop/: part-1.md  part-2.md  part-3.md  part-4.md  part-5.md  part-6.md  part-7.md  part-8.md  part-9.md
workshop/assets/: mock_data.csv
